[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch_retrieve"
authors = [
    {name = "Simon Pfreundschuh", email = "simon.pfreundschuh@colostate.edu"},
]
description = """
A framework for building remote sensing retrievals based on PyTorch and
PyTorch lightning.
"""
readme = "README.md"
requires-python = ">=3.7"
keywords = ["PyTorch", "machine learning", "remote sensing", "satellite"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "pyyaml",
    "toml",
    "pytest",
    "torch",
    "lightning",
    "scipy",
    "numpy",
    "xarray",
    "rich",
    "tensorboard",
    "axial-attention",
    "torchvision"
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.scripts]
"pytorch_retrieve" = "pytorch_retrieve.cli:pytorch_retrieve"

[tool.setuptools]
packages = ["pytorch_retrieve"]
